--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "sass": "^1.85.1",
+    "spinners-react": "^1.0.10",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
