--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@rollup/rollup-linux-x64-gnu": "^4.37.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.1",
