added credit page structure and reown

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 VITE_API_BASE_URL=http://localhost:5000
+VITE_RATIO_EARN=100
+
+VITE_PUBLIC_URL=https://efotask-frontend.vercel.app
+
+VITE_REOWN_PROJECT_ID=434bcaaae57dabbfacb38c854eeaa049
+VITE_HARDHAT_RPC_URL=http://localhost:8545
+VITE_HARDHAT_WS_RPC_URL=ws://localhost:8545
