--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@reown/appkit": "^1.7.1",
+    "@reown/appkit-adapter-ethers": "^1.7.1",
     "@rollup/rollup-linux-x64-gnu": "^4.37.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
