fixed build error with vite config

--- a/package.json
+++ b/package.json
@@ -57,5 +57,5 @@
     "vite": "~5.2.0",
     "vitest": "^0.34.6"
   },
-  "description": "Cye Binary Business"
+  "description": "Earn from online Tasks Bot"
 }
