added advertiser pages

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ VITE_PUBLIC_URL=https://efotask-frontend.vercel.app
 VITE_REOWN_PROJECT_ID=434bcaaae57dabbfacb38c854eeaa049
 VITE_HARDHAT_RPC_URL=http://localhost:8545
 VITE_HARDHAT_WS_RPC_URL=ws://localhost:8545
+VITE_ERC20_EFOVAULT_ADDRESS=0x242F43c0F8ea03a423888f43B570482e5776e53A
+VITE_ERC20_USDT_ADDRESS=0x8A52aF2cc283EF1a0cE744Df96d5D0B542c379aa
+
+VITE_REFERRAL_FEE=5
+VITE_MAIN_PERCENT=80
