--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@reown/appkit": "^1.7.1",
     "@reown/appkit-adapter-ethers": "^1.7.1",
-    "@rollup/rollup-linux-x64-gnu": "^4.37.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
+    "ethers": "^6.13.5",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.2.0",
     "react-router": "^5.3.4",
@@ -36,6 +38,9 @@
     "sass": "^1.85.1",
     "spinners-react": "^1.0.10",
     "swiper": "^11.2.5"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.37.0"
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
